fix overlapping labels in plot

--- a/src/style.scss
+++ b/src/style.scss
@@ -110,7 +110,7 @@ i.material-icons {
     text-align: center;
     user-select: none;
     position: absolute;
-    left: 16px;
+    left: 8px;
 
 }
 
@@ -120,10 +120,11 @@ i.material-icons {
     position: relative;
     justify-content: center;
     margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .dayNavigationButton {
-    line-height: 32px;
+    line-height: 19px;
     cursor: pointer;
 }
 
